# physics-informed-flow-map

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
experiments/: mnist_pipeline.py  pretrained_sample.py
notebooks/: exploration_of_mfm.ipynb
outputs/: samples_n10.pt  samples_n200.pt  samples_n500.pt
src/physics_informed_flow_map/: __init__.py
src/physics_informed_flow_map/mfm_modified_for_physics_informed_flow_map/: requirements.txt
src/physics_informed_flow_map/mfm_modified_for_physics_informed_flow_map/conf/model/: sit_xl_2.yaml
src/physics_informed_flow_map/mfm_modified_for_physics_informed_flow_map/src/mfm/utils/: image_reward_utils.py
